Simplified code